# Parallelus_3

./: .gitignore  README.md
Differential_Equation/: CMakeLists.txt  main.c
Differential_Equation/include/: Data.h  Logic.h
Differential_Equation/src/: Data.c  Logic.c
Differential_equation/: CMakeLists.txt  main.c
Differential_equation/include/: Analysis.h  Files.h  Logic.h  Minunit.h  SpecialPoints.h  Structures.h
Differential_equation/src/: Analysis.c  Files.c  Logic.c  SpecialPoins.c  Structures.c  Test_SpecialPoints.c
Visualization/: EditorForm.Designer.cs  EditorForm.cs  Program.cs  Visualization.csproj  Visualization.sln
Visualization/Properties/: AssemblyInfo.cs
Visualization/Visualization/: DiffEqSystem.cs  DifferentialEquationSystem.cs  Drawer.cs  EditorForm.cs  Form.Designer.cs  Result.cs  Visualization.csproj
Visualization/Visualization/Graphics/: Drawer.cs  EditorForm.cs
Visualization/Visualization/Logic/: DiffEqSystem.cs
